# NekoLLM

./: .gitignore  README.md  config.yml  koishiOnLine.py  main.py  pyproject.toml  requirements.txt  token_generator.py  tools_host.py
data/: NekoQA-10K2Qwen.py
dev_napcatBot/: main.py
dev_napcatBot/plugins/: _bot_api.py
dev_napcatBot/plugins/messageLog/: README.md  __init__.py  main.py  requirements.txt
dev_napcatBot/plugins/poke/: README.md  __init__.py  main.py
dev_napcatBot/plugins/qwen3/: README.md  __init__.py  main.py  requirements.txt  tools.py
dev_nonebot/: README.md  pyproject.toml
dev_nonebot/plugins/qwen3_agent/: __init__.py  agent.py  config.py  tools4onebotv11.py
src/nekollm/: __init__.py  __main__.py  proxy_app.py  token_generator.py  tools_app.py
tools/: QQ2SFT.py  QQLeaderBoard.py
