[project]
name = "nekollm"
version = "0.1.0"
description = "FastAPI proxy and tooling services for the Napcat bot stack."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Puiching Memory" }]
dependencies = [
  "fastapi",
  "httpx",
  "loguru",
  "uvicorn",
  "ncatbot==4.2.4",
]

[project.optional-dependencies]
develop = [
  "uvicorn[standard]",
]

[project.scripts]
nekollm-proxy = "nekollm.__main__:run_proxy"
nekollm-tools = "nekollm.__main__:run_tools"
nekollm-token = "nekollm.token_generator:main"
nekollm = "nekollm.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
