[project]
name = "dev_nonebot"
version = "0.1.0"
description = "dev_nonebot"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "tiktoken>=0.7.0",
    "openai>=1.40.0",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["plugins"]
builtin_plugins = []
